--- a/film.html
+++ b/film.html
@@ -7,12 +7,13 @@
 <meta name="Description" content="Enter your description here"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+<link rel="stylesheet" href="css/bootstrap-custom.css">
 <link rel="stylesheet" href="assets/css/style.css">
-<link rel="stylesheet" href="scss/_variables.scss">
+<link rel="stylesheet" href="style.css">
 <title>Title</title>
 </head>
 <body class=""> 
-    <h1 class="text-center mt-2">Megnőzendő filmek</h1>
+    <h1 class="text-center mt-3">Megnőzendő filmek</h1>
     <main class="container">
         <form action="" class="mt-5">
             <fieldset>
@@ -42,11 +43,14 @@
                         </div>
                     </div>
                     <div class="col-2 d-flex align-items-center">
-                        <button id="hozzaadas" class="btn btn-primary w-100">Hozzáadás</button>
+                        <button id="hozzaadas" class="btn hozzadas w-100">Hozzáadás</button>
                     </div>
                 </section>
             </fieldset>
         </form>
+        <section class="row mt-5" id="film-lista">
+            
+        </section>
     </main>
 
 
