--- a/film.html
+++ b/film.html
@@ -5,15 +5,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="Description" content="Enter your description here"/>
+<link rel="icon" href="ikon.png" type="image/png">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link rel="stylesheet" href="css/bootstrap-custom.css">
 <link rel="stylesheet" href="assets/css/style.css">
 <link rel="stylesheet" href="style.css">
-<title>Title</title>
+<title>The Movies</title>
 </head>
-<body class=""> 
-    <h1 class="text-center mt-3">Megnőzendő filmek</h1>
+<body> 
+    <h1 class="text-center mt-3">Megnézendő filmek</h1>
     <main class="container">
         <form action="" class="mt-5">
             <fieldset>
