--- a/film.html
+++ b/film.html
@@ -43,13 +43,15 @@
                         </div>
                     </div>
                     <div class="col-2 d-flex align-items-center">
-                        <button id="hozzaadas" class="btn hozzadas w-100">Hozzáadás</button>
+                        <button id="hozzaadas" class="btn hozzadas w-100" type="button">Hozzáadás</button>
                     </div>
                 </section>
             </fieldset>
         </form>
         <section class="row mt-5" id="film-lista">
-            
+            <div class="col-12" id="kartyak">
+                
+            </div>
         </section>
     </main>
 
