--- a/film.html
+++ b/film.html
@@ -22,13 +22,13 @@
             <form action="" class="mt-5">
             <fieldset>
                 <section class="row">
-                    <div class="col-4">
+                    <div class="col-md-4 col-xs-12">
                         <div class="input-group text-center">
                             <label for="cim" class="input-group-text">Film címe</label>
                             <input type="text" id="cim" class="form-control">
                         </div>
                     </div>
-                    <div class="col-2">
+                    <div class="col-md-2 col-xs-12">
                         <div class="text-center input-group">
                             <label for="film-tipus" class="input-group-text">Film típusa</label>
                             <select name="film-tipus" id="film-tipus" class="form-control">
@@ -40,7 +40,7 @@
                             </select>
                         </div> 
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6 col-xs-12">
                         <div class="input-group text-center">
                             <label for="kep-url" class="input-group-text">Kép URL</label>
                             <input type="text" id="kep-url" class="form-control" placeholder="https://...">
@@ -48,7 +48,7 @@
                     </div>
                 </section>
                 <section class="row">
-                    <div class="col-12 d-flex align-items-center mt-2">
+                    <div class="col-md-12 d-flex align-items-center mt-2 col-xs-12">
                         <button id="hozzaadas" class="btn hozzadas w-100" type="button">Hozzáadás</button>
                     </div>
                 </section>
